lumina-compiler/src/mir/lower/pat/snapshots/lumina_compiler__mir__lower__pat__tests__bind_inside_tuple_nested.snap
---
source: lumina-compiler/src/mir/lower/pat/tests.rs
expression: "format!\n(\"{}\\n\\nmissing patterns {{\\n  {}\\n}}\", tree,\nmissing.into_iter().map(| p |\np.fmt(& name_of_var, & name_of_field).to_string()).format(\"\\n  \"))"
---
tuple(len = 4)
  u8 ..
      tuple(len = 3)
        u8 ..
            u8 ..
                u8 ..
                    u8 ..
                        {
                          table = [PointTable { binds: [(v0, 0), (v1, 1), (v2, 2), (v3, 3), (v4, 4), (v5, 5), (v6, 6), (v7, 7)] }],
                          excess = [(▵·0:sum0 u8)]
                          tail = 0
                        }

missing patterns {
  
}
