lumina-compiler/src/mir/lower/pat/snapshots/lumina_compiler__mir__lower__pat__tests__instant_wildcard.snap
---
source: lumina-compiler/src/mir/lower/pat/tests.rs
expression: "format!\n(\"{}\\n\\nmissing patterns {{\\n  {}\\n}}\", tree,\nmissing.into_iter().map(| p |\np.fmt(& name_of_var, & name_of_field).to_string()).format(\"\\n  \"))"
---
{
  table = [PointTable { binds: [] }],
  excess = []
  tail = 0
}

missing patterns {
  
}
