lumina-compiler/src/mir/lower/pat/snapshots/lumina_compiler__mir__lower__pat__tests__just_x_nothing.snap
---
source: lumina-compiler/src/mir/lower/pat/tests.rs
expression: "format!\n(\"{}\\n\\nmissing patterns {{\\n  {}\\n}}\", tree,\nmissing.into_iter().map(| p |\np.fmt(& name_of_var, & name_of_field).to_string()).format(\"\\n  \"))"
---
▵·0:sum0 variant0
    {
      table = [PointTable { binds: [(b0, 1)] }],
      excess = [u8]
      tail = 0
    }
▵·0:sum0 variant1
    {
      table = [PointTable { binds: [] }],
      excess = []
      tail = 2
    }

missing patterns {
  
}
